# the-redacted-protocol

./: .dockerignore  .env.example  .gitignore  AGENT-LOOP.ps1  CONFIGURE-EVERYTHING.bat  Cargo.toml  DEPLOY-ALL-ON-VPS.sh  DEPLOY-DEVNET.ps1  DEPLOY-PROFESSIONAL.bat  DEPLOY-SIMPLIFICADO.md  DEPLOY-TO-VPS-NOW.bat  DEPLOY-VERCEL.bat  DEPLOY-VPS-SHARED.sh  DEPLOYMENT.md  DIAGNOSTICO.md  DNS-CONFIG.md  Dockerfile  Dockerfile.anchor  FINAL-DEPLOY.md  FINAL-STATUS.ps1  GUIA-CONFIGURACION.md  HACKATHON.md  LAUNCH-AGENT-BG.bat  LAUNCHPAD-GO-LIVE.md  LAUNCHPAD.md  LICENSE  MAINNET_ROADMAP.md  MANIFESTO.md  PRESALE-100SOL.md  PRESALE-RUNBOOK.md  PRODUCTION.md  PROFESSIONAL-DEPLOYMENT-GUIDE.md  PROFESSIONAL-DEPLOYMENT.md  README.md  RUN-BOT-LOCAL.bat  SECURITY.md  SEED-TOKENS.ps1  SETUP-COMPLETE.md  START-AGENT-FIXED.bat  START-ALL-LOCAL.bat  (+36 more)
airdrop-site/: package.json  tailwind.config.js
airdrop-site/src/app/: globals.css  layout.tsx  page.tsx
contracts/: Anchor.toml  Cargo.toml  bootstrap_bonding_curve.js  bootstrap_bonding_curve.mjs  debug_global.mjs  hex2b58.mjs  init_error_bash.txt  package-lock.json  package.json  test_buy.mjs  test_create_pool.mjs  tsconfig.json
contracts/programs/rd-archive/: Cargo.toml
contracts/programs/rd-archive/src/: lib.rs
contracts/programs/rd-bondingcurve/: Cargo.toml
contracts/programs/rd-bondingcurve/src/: lib.rs
contracts/programs/rd-fragment/: Cargo.toml
contracts/programs/rd-fragment/src/: lib.rs
contracts/programs/rd-governance/: Cargo.toml
contracts/programs/rd-governance/src/: lib.rs
contracts/programs/rd-presale/: Cargo.toml
contracts/programs/rd-presale/src/: lib.rs
contracts/programs/rd-rewards/: Cargo.toml
contracts/programs/rd-rewards/src/: lib.rs
contracts/programs/rd-staking/: Cargo.toml
contracts/programs/rd-staking/src/: lib.rs
contracts/programs/rd-token/: Cargo.toml
contracts/programs/rd-token/src/: lib.rs  token_config.rs
contracts/programs/rd-treasury/: Cargo.toml
contracts/programs/rd-treasury/src/: lib.rs
contracts/scratch/: calc_pda.mjs
contracts/scripts/: airdrop-snapshot.ts  create-raydium-pool.ts  init-bondingcurve.ts  init-presale.ts  init-rewards-pro.ts  init-rewards.ts  init-staking-pro.ts  init-staking.ts  launch-presale.ts  lock-lp.ts  seed-docs.ts  stake-tokens.ts
contracts/tests/: rd-archive.ts  rd-bondingcurve.ts  rd-fragment.ts  rd-presale.ts  rd-rewards.ts  rd-staking.ts  rd-token.ts  rd-treasury.ts
crates/rd-arweave/: Cargo.toml
crates/rd-arweave/src/: lib.rs
crates/rd-cli/: Cargo.toml
crates/rd-cli/src/: commands.rs  display.rs  main.rs  repl.rs
crates/rd-config/: Cargo.toml
crates/rd-config/src/: lib.rs  loader.rs  settings.rs
crates/rd-core/: Cargo.toml
crates/rd-core/src/: autonomous_news.rs  lib.rs  orchestrator.rs  permission_checker.rs  prompt_builder.rs  tests.rs  turn_summary.rs
crates/rd-hooks/: Cargo.toml
crates/rd-hooks/src/: hook_types.rs  lib.rs  runner.rs
crates/rd-muapi/: Cargo.toml
crates/rd-muapi/src/: lib.rs
crates/rd-providers/: Cargo.toml
crates/rd-providers/src/: anthropic.rs  lib.rs  openai_compat.rs  router.rs  trait_def.rs
crates/rd-session/: Cargo.toml
crates/rd-session/src/: lib.rs  session.rs  store.rs
crates/rd-tools/: Cargo.toml  memory.json
crates/rd-tools/src/: airdrop.rs  builtins.rs  launch_token.rs  lib.rs  muapi_tools.rs  rate_limiter.rs  registry.rs  solana.rs  spec.rs  telegram.rs  telegram_bot.rs  tests.rs  token_config.rs  twitter.rs
crates/rd-types/: Cargo.toml
crates/rd-types/src/: block.rs  confidence.rs  event.rs  fragment.rs  image_gen.rs  lib.rs  news.rs  ocr.rs  permission.rs  provider.rs  tests.rs
dashboard/: .env.example  .env.local.example  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
dashboard/public/: manifest.json
dashboard/scripts/: migrate-rdx-to-spl.ts
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/airdrop/: page.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/missions/: page.tsx
dashboard/src/app/terminal/: page.tsx
dashboard/src/components/: AirdropSection.tsx  BuyIncentivesPanel.tsx  CinemaPanel.tsx  CinemaStudioSection.tsx  ColosseumSection.tsx  DocLiveFeed.tsx  ErrorBoundary.tsx  Footer.tsx  FragmentsSection.tsx  GallerySection.tsx  GamificationPanel.tsx  GovernancePanel.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  ImageGenSection.tsx  LaunchCountdown.tsx  LaunchpadPanel.tsx  LeaksFeed.tsx  NewsSection.tsx  OcrSection.tsx  PresalePanel.tsx  Providers.tsx  ScrollVideoSection.tsx  SolanaProvider.tsx  TerminalEasterEgg.tsx  TokenChart.tsx  TokenLaunchPanel.tsx  TokenLiveBanner.tsx  TokenomicsSection.tsx  TruthReconstructor.tsx
dashboard/src/lib/: antifraud.ts  broadcast-messages.ts  db.ts  gamification.ts  geminiService.ts  rdx-public-config.ts  solana-distributor.ts  spl-service.ts  telegram-scheduler.ts
dashboard/src/lib/rd-bondingcurve/: client.ts  idl.ts
deploy/: deploy.sh  docker-compose.yml  nginx.conf
docs/: AGENT_ARCHITECTURE.md  AGENT_DEEP_DIVE.md  AGENT_GUIDE.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  FREE-SETUP.md  LAUNCH-CHECKLIST.md  PRESALE_SECURITY.md  SECURITY.md  WALLETS.md
docs/card-game/: CARD_DATABASE.md  GAME_DESIGN.md  RULEBOOK.md  SOLANA_INTEGRATION.md
nginx/: redacted.bond.conf
pumpfun-backend/: .dockerignore  .env.example  Dockerfile  README.md  package.json  server.ts  tsconfig.json
pumpfun-backend/src/: app.ts  config.ts
pumpfun-backend/src/models/: Candle.ts  Token.ts  Trade.ts
pumpfun-backend/src/program/: client.ts  idl.ts  logListener.ts  web3.ts
pumpfun-backend/src/routes/: candles.ts  launch.ts  tokens.ts  trade.ts  trades.ts
pumpfun-backend/src/sockets/: index.ts
pumpfun-backend/src/utils/: candle.ts
scripts/: airdrop-distribute.ts  airdrop-snapshot.ts  audit-wallets.sh  launch-rdx-official.ts  launch-token.sh  launch_rdx_js.mjs  prepare-presale-launch.sh  save_wallets.js  save_wallets.ts
(+29 files in other folders)
