[workspace]
resolver = "2"
members = [
    "crates/rd-types",
    "crates/rd-session",
    "crates/rd-providers",
    "crates/rd-tools",
    "crates/rd-hooks",
    "crates/rd-config",
    "crates/rd-core",
    "crates/rd-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AKIRA-33/the_redacted_protocol"
description = "Redacted Protocol — Autonomous zero-knowledge AI agent for document declassification on Solana"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"

# Filesystem
tokio-util = { version = "0.7", features = ["io"] }
tempfile = "3.14"
dirs = "5.0"

# Scheduling
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
mockall = "0.13"
