[workspace]
members = [
    "programs/rd-fragment",
    "programs/rd-archive",
    "programs/rd-staking",
    "programs/rd-rewards",
    "programs/rd-treasury",
    "programs/rd-token",
    "programs/rd-presale",
    "programs/rd-governance",
    "programs/rd-bondingcurve",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
