[package]
name = "rd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rd"
path = "src/main.rs"

[dependencies]
rd-types = { path = "../rd-types" }
rd-session = { path = "../rd-session" }
rd-providers = { path = "../rd-providers" }
rd-tools = { path = "../rd-tools" }
rd-hooks = { path = "../rd-hooks" }
rd-config = { path = "../rd-config" }
rd-core = { path = "../rd-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm.workspace = true
ratatui.workspace = true
chrono.workspace = true
hex.workspace = true
uuid.workspace = true
