[package]
name = "rd-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rd-types = { path = "../rd-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
dirs.workspace = true
