[package]
name = "rd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rd-types = { path = "../rd-types" }
rd-session = { path = "../rd-session" }
rd-providers = { path = "../rd-providers" }
rd-tools = { path = "../rd-tools" }
rd-muapi = { path = "../rd-muapi" }
rd-arweave = { path = "../rd-arweave" }
rd-hooks = { path = "../rd-hooks" }
rd-config = { path = "../rd-config" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
regex = "1.11"
sha2.workspace = true
hex.workspace = true
futures = "0.3"
