[package]
name = "rd-muapi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
