[package]
name = "rd-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rd-types = { path = "../rd-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
futures.workspace = true
tracing.workspace = true
bytes = "1"
