[package]
name = "rd-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rd-types = { path = "../rd-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tempfile.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
