[package]
name = "rd-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rd-types = { path = "../rd-types" }
rd-providers = { path = "../rd-providers" }
rd-config = { path = "../rd-config" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
