[package]
name = "rd-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rd-types = { path = "../rd-types" }
rd-muapi = { path = "../rd-muapi" }
rd-providers = { path = "../rd-providers" }
rd-config = { path = "../rd-config" }
rd-arweave = { path = "../rd-arweave" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
chrono.workspace = true
regex = "1.11"
urlencoding = "2.1"
sha2 = { workspace = true }
hex = { workspace = true }
bs58 = "0.5"
base64 = "0.22"
