[package]
name = "rd-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
regex = "1.11"
reqwest.workspace = true
tokio.workspace = true
url.workspace = true
quick-xml = "0.31"
