[package]
name = "rd-bondingcurve"
version = "0.1.0"
description = "RDX Bonding Curve — pump.fun-style launchpad program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rd_bondingcurve"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18.15"
