[package]
name = "rd-governance"
version = "0.1.0"
description = "Redacted Protocol Governance Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rd_governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token"] }
solana-program = "1.18.15"

