[package]
name = "rd-presale"
version = "0.1.0"
description = "RDX Fair Presale Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rd_presale"

[features]
default = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
